--- a/index.html
+++ b/index.html
@@ -14,13 +14,149 @@
     <!-- External CSS -->
 
     <link rel="stylesheet" href="style.css">
+
+    <!-- Favicon -->
+
+    <link rel="shortcut icon" href="images/ICON/Logo.png" type="image/x-icon">
 </head>
 
 <body>
 
+    <header>
 
+        <!-- Navbar -->
 
+        <div class="container">
+            <nav class=" navbar navbar-expand-lg navbar-light  bg-light">
+                <a class=" navbar-brand" href="#"><img class="w-25" src="images/ICON/Logo.png" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <ul class="navbar-nav ml-auto ">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Books <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#products">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Others</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Blog</a>
+                        </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Signin</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
 
+    <section class="header">
+        <div class="container">
+            <div class="row d-flex align-items-center header">
+                <div class="col-md-6 header-text">
+                    <h6>Are you ready to learn?</h6>
+                    <h1>Learn with fun</h1>
+                    <h1>on <span id="green-color">any schedule</span></h1>
+                    <p>loremmmidfifgifgnifgfigjfijfgjg fgfgfgfghdf ffregrgrg
+                        rregrgrgr grtgtrgtrgtrgtrg
+                    </p>
+                    <button class="button-green">Get Started</button>
+                </div>
+                <div class="col-md-6">
+                    <img class="w-100" src="images/Photos/Illustration.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Us -->
+    <section class="about-us">
+        <div class="container">
+            <div class="row d-flex justify-content-between align-items-center text-center">
+                <div class="col-md-3 each-item"><img class="w-25" src="images/ICON/book.png" alt="book-icon">
+                    <h3>1500+ Topic</h3>
+                    <h6>Learn Anythings</h6>
+                </div>
+                <div class="col-md-3 without-icon each-item">
+                    <h3>18000+ Students</h3>
+                    <h6>Learn Anythings</h6>
+                </div>
+                <div class="col-md-3 each-item">
+                    <img class="w-25" src="images/ICON/Test.png" alt="book-icon">
+                    <h3>9K+ Test Taken</h3>
+                    <h6>Learn Anythings</h6>
+                </div>
+                <div class="col-md-3 without-icon each-item">
+                    <h3>2000+ student</h3>
+                    <h6>Learn Anythings</h6>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Card -->
+
+    <section class="online-courses">
+        <div class="container">
+            <div class="container" id="products">
+                <div class="row  d-flex justify-content-between">
+                    <h4>Online Courses</h3>
+                        <div class="card-deck">
+                            <div class="card text-center">
+                                <img src="images/phone/phone-1.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Xiaomi Redmi K30 5G</h5>
+                                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting
+                                        industry.
+                                        Lorem Ipsum has been the industry's standard.</p>
+                                    <h3 class="price">&#36;400</h3>
+                                </div>
+                                <div class="card-footer">
+                                    <button class="buy-button">Buy now &rarr;</button>
+                                </div>
+                            </div>
+                            <div class="card text-center">
+                                <img src="images/phone/phone-2.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">iPhone 11 pro</h5>
+                                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting
+                                        industry.
+                                        Lorem Ipsum has been the industry's standard.
+                                        content.</p>
+                                    <h3 class="price">&#36;1199</h3>
+                                </div>
+                                <div class="card-footer">
+                                    <button class="buy-button">Buy now &rarr;</button>
+                                </div>
+                            </div>
+                            <div class="card text-center">
+                                <img src="images/phone/phone-3.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Samsung Galaxy Note10+</h5>
+                                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and
+                                        typesetting
+                                        industry.
+                                        Lorem Ipsum has been the industry's standard.</p>
+                                    <h3 class="price">&#36;999</h3>
+                                </div>
+                                <div class="card-footer">
+                                    <button class="buy-button">Buy now &rarr;</button>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Bootstrap JS CDN -->
 
