--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Navbar -->
 
         <div class="container">
-            <nav class=" navbar navbar-expand-lg navbar-light  bg-light">
+            <nav class=" navbar navbar-expand-lg navbar-light  bg-color fixed-top">
                 <a class=" navbar-brand" href="#"><img class="w-25" src="images/ICON/Logo.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
                         </li>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Signin</a>
+                          <button class="button-green"><a class="nav-link" href="#">Signin</a></button>  
                         </li>
                     </ul>
                 </div>
@@ -59,13 +59,12 @@
 
     <section class="header">
         <div class="container">
-            <div class="row d-flex align-items-center header">
+            <div class="row d-flex align-items-center header bg-color">
                 <div class="col-md-6 header-text">
                     <h6>Are you ready to learn?</h6>
                     <h1>Learn with fun</h1>
                     <h1>on <span id="green-color">any schedule</span></h1>
-                    <p>loremmmidfifgifgnifgfigjfijfgjg fgfgfgfghdf ffregrgrg
-                        rregrgrgr grtgtrgtrgtrgtrg
+                    <p>lLorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam consequat placerat lacus, ac auctor est sollicitudin fringilla.
                     </p>
                     <button class="button-green">Get Started</button>
                 </div>
@@ -79,23 +78,34 @@
     <!-- About Us -->
     <section class="about-us">
         <div class="container">
-            <div class="row d-flex justify-content-between align-items-center text-center">
-                <div class="col-md-3 each-item"><img class="w-25" src="images/ICON/book.png" alt="book-icon">
-                    <h3>1500+ Topic</h3>
+            <div class="row d-flex justify-content-between text-center">
+                <div class="col-md-3 each-item">
+                    <div class="info">
+                    <img class="w-25" src="images/ICON/book.png" alt="book-icon">
+                    <h4>1500+ Topic</h4>
                     <h6>Learn Anythings</h6>
                 </div>
-                <div class="col-md-3 without-icon each-item">
-                    <h3>18000+ Students</h3>
-                    <h6>Learn Anythings</h6>
                 </div>
                 <div class="col-md-3 each-item">
-                    <img class="w-25" src="images/ICON/Test.png" alt="book-icon">
-                    <h3>9K+ Test Taken</h3>
+                    <div class="info">
+                    <img class="w-25" src="images/ICON/Student.png" alt="book-icon">
+                    <h4>18000+ Students</h4>
                     <h6>Learn Anythings</h6>
                 </div>
-                <div class="col-md-3 without-icon each-item">
-                    <h3>2000+ student</h3>
+                </div>
+                <div class="col-md-3 each-item">
+                    <div class="info">
+                    <img class="w-25" src="images/ICON/Test.png" alt="book-icon">
+                    <h4>9K+ Test Taken</h4>
                     <h6>Learn Anythings</h6>
+                </div>
+                </div>
+                <div class="col-md-3 each-item">
+                    <div class="info">
+                    <img class="w-25" src="images/ICON/Students.png" alt="book-icon">
+                    <h4>2000+ student</h4>
+                    <h6>Learn Anythings</h6>
+                </div>
                 </div>
             </div>
         </div>
@@ -104,59 +114,187 @@
     <!-- Card -->
 
     <section class="online-courses">
-        <div class="container">
-            <div class="container" id="products">
-                <div class="row  d-flex justify-content-between">
-                    <h4>Online Courses</h3>
+            <div class="container" id="">
+                <div class="row  d-flex justify-content-center courses-title">
+                        <h2>Online Courses</h2>
+                     </div>
                         <div class="card-deck">
-                            <div class="card text-center">
-                                <img src="images/phone/phone-1.png" class="card-img-top" alt="...">
+                            <div class="card">
+                                <img src="images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Xiaomi Redmi K30 5G</h5>
-                                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and
-                                        typesetting
-                                        industry.
-                                        Lorem Ipsum has been the industry's standard.</p>
-                                    <h3 class="price">&#36;400</h3>
+                                    <h4 class="card-title">Modern Psychology</h4>
+                                    <p class="card-text">Designation</p>
+                                    <button class="button-green">Buy Course</button>
                                 </div>
                                 <div class="card-footer">
-                                    <button class="buy-button">Buy now &rarr;</button>
-                                </div>
+                                    <div class="card-footer row  d-flex justify-content-between">
+                                        <div class="row d-flex">
+                                         <img class="" src="images/ICON/calendar.png" alt="">
+                                         <h6>Start 20 April,2021</h6>
+                                        </div>
+                                        <div class="row d-flex">
+                                         <img src="images/ICON/people.png" alt="">
+                                         <h6>60 Seats</h6>
+                                        </div>
+                                     </div>                                </div>
                             </div>
-                            <div class="card text-center">
-                                <img src="images/phone/phone-2.png" class="card-img-top" alt="...">
+                            <div class="card">
+                                <img src="images/Photos/Morder psyc.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">iPhone 11 pro</h5>
-                                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and
-                                        typesetting
-                                        industry.
-                                        Lorem Ipsum has been the industry's standard.
-                                        content.</p>
-                                    <h3 class="price">&#36;1199</h3>
+                                    <h4 class="card-title">Modern Psychology</h4>
+                                    <p class="card-text">Designation</p>
+                                    <button class="button-green">Buy Course</button>
                                 </div>
                                 <div class="card-footer">
-                                    <button class="buy-button">Buy now &rarr;</button>
-                                </div>
+                                    <div class="card-footer row  d-flex justify-content-between">
+                                        <div class="row d-flex">
+                                         <img class="" src="images/ICON/calendar.png" alt="">
+                                         <h6>Start 20 April,2021</h6>
+                                        </div>
+                                        <div class="row d-flex">
+                                         <img src="images/ICON/people.png" alt="">
+                                         <h6>60 Seats</h6>
+                                        </div>
+                                     </div>                                </div>
                             </div>
-                            <div class="card text-center">
-                                <img src="images/phone/phone-3.png" class="card-img-top" alt="...">
+                            <div class="card">
+                                <img src="images/Photos/Morder pychons.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Samsung Galaxy Note10+</h5>
-                                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and
-                                        typesetting
-                                        industry.
-                                        Lorem Ipsum has been the industry's standard.</p>
-                                    <h3 class="price">&#36;999</h3>
+                                    <h4 class="card-title">Modern Psychology</h4>
+                                    <p class="card-text">Designation</p>
+                                    <button class="button-green">Buy Course</button>
                                 </div>
                                 <div class="card-footer">
-                                    <button class="buy-button">Buy now &rarr;</button>
-                                </div>
+                                    <div class="card-footer row  d-flex justify-content-between">
+                                        <div class="row d-flex">
+                                         <img class="" src="images/ICON/calendar.png" alt="">
+                                         <h6>Start 20 April,2021</h6>
+                                        </div>
+                                        <div class="row d-flex">
+                                         <img src="images/ICON/people.png" alt="">
+                                         <h6>60 Seats</h6>
+                                        </div>
+                                     </div>                                </div>
                             </div>
                         </div>
                 </div>
             </div>
+    </section>
+
+    <!-- Testimonial -->
+    <section class="tesimonial">
+        <div class="container">
+            <div class="row d-flex justify-content-center testimonial-title">
+                <h2>Testinmonial</h2>
+
+            </div>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+          <div class="row  d-flex  align-items-center carousel-info">
+              <div class="col-md-5"> <img class="w-50 float-right" src="images/Photos/Man.png" alt=""> 
+          </div>
+              <div class="col-md-7">  <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h5></div>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <div class="row  d-flex  align-items-center carousel-info">
+            <div class="col-md-5"> <img class="w-50 float-right" src="images/Photos/woman.jpeg" alt=""> 
+        </div>
+            <div class="col-md-7">  <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h5></div>
+        </div>      </div>
+      <div class="carousel-item">
+        <div class="row  d-flex  align-items-center carousel-info">
+            <div class="col-md-5"> <img class="w-50 float-right" src="images/Photos/man2.jpeg" alt=""> 
+        </div>
+            <div class="col-md-7">  <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h5></div>
+        </div>      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
         </div>
     </section>
+
+    <!-- Newsletter -->
+
+    <section class="newsletter p-3">
+        <div class="container  shadow bg-color text-black  p-4 p-md-5 rounded ">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-md-6">
+                    <h2>NEWS LETTER</h2>
+                    <p>Subscribe now to get all news and special offers!
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <form class="form" action="">
+                        <div class="input-group">
+                            <input class="form-control" placeholder="Enter Your Email Here" type="text">
+                            <div class="input-group-append">
+                                <button class="btn btn-success">Subscribe</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+
+    <footer>
+        <div class="container footer-bg text-white">
+            <div class="row footer-text">
+                <div class="col-md-6 ">
+                    <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h6></h6>
+                </div>
+                <div class="col-md-2">
+                    <ul class="list-unstyled">
+                        <li>Courses</li>
+                        <li>Graphic Design</li>
+                        <li>Web Design</li>
+                        <li>Business</li>
+                        <li>Marketing</li>
+                        <li>Engineering</li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <ul class="list-unstyled">
+                        <li>Terms</li>
+                        <li>Graphic Design</li>
+                        <li>Web Design</li>
+                        <li>Business</li>
+                        <li>Marketing</li>
+                        <li>Engineering</li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <ul class="list-unstyled">
+                        <li>Useful Link</li>
+                        <li>Graphic Design</li>
+                        <li>Web Design</li>
+                        <li>Business</li>
+                        <li>Marketing</li>
+                        <li>Engineering</li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="credits"> <small id="credits">&copy; Tazwar 2020 || All rights reserved.</small> </div>
+            </div>
+        
+    </footer>
 
     <!-- Bootstrap JS CDN -->
 
