completed somehow... still got some bugs

--- a/index.html
+++ b/index.html
@@ -27,29 +27,29 @@
         <!-- Navbar -->
 
         <div class="container">
-            <nav class=" navbar navbar-expand-lg navbar-light  bg-color fixed-top">
+            <nav class=" navbar navbar-expand-lg navbar-light">
                 <a class=" navbar-brand" href="#"><img class="w-25" src="images/ICON/Logo.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <ul class="navbar-nav ml-auto ">
+                    <ul class="navbar-nav ml-auto float-right">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Books <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#books">Books <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#products">Courses</a>
+                            <a class="nav-link" href="#courses">Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Others</a>
+                            <a class="nav-link" href="#testimonial">Testimonial</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
+                            <a class="nav-link" href="#blog">Blog</a>
                         </li>
                         </li>
                         <li class="nav-item">
-                          <button class="button-green"><a class="nav-link" href="#">Signin</a></button>  
+                        <a href="#"><button class="sign-in"><a class="nav-link" href="#">Signin</a></button> </a>   
                         </li>
                     </ul>
                 </div>
@@ -58,7 +58,7 @@
     </header>
 
     <section class="header">
-        <div class="container">
+        <div class="container top-margin">
             <div class="row d-flex align-items-center header bg-color">
                 <div class="col-md-6 header-text">
                     <h6>Are you ready to learn?</h6>
@@ -77,7 +77,7 @@
 
     <!-- About Us -->
     <section class="about-us">
-        <div class="container">
+        <div class="container top-margin">
             <div class="row d-flex justify-content-between text-center">
                 <div class="col-md-3 each-item">
                     <div class="info">
@@ -114,7 +114,7 @@
     <!-- Card -->
 
     <section class="online-courses">
-            <div class="container" id="">
+            <div class="container top-margin" id="courses">
                 <div class="row  d-flex justify-content-center courses-title">
                         <h2>Online Courses</h2>
                      </div>
@@ -183,7 +183,7 @@
 
     <!-- Testimonial -->
     <section class="tesimonial">
-        <div class="container">
+        <div class="container top-margin" id="testimonial">
             <div class="row d-flex justify-content-center testimonial-title">
                 <h2>Testinmonial</h2>
 
@@ -230,7 +230,7 @@
     <!-- Newsletter -->
 
     <section class="newsletter p-3">
-        <div class="container  shadow bg-color text-black  p-4 p-md-5 rounded ">
+        <div class="container  shadow bg-color text-black  p-4 p-md-5 rounded top-margin" id="blog">
             <div class="row justify-content-between align-items-center">
                 <div class="col-md-6">
                     <h2>NEWS LETTER</h2>
@@ -254,14 +254,14 @@
     <!-- Footer -->
 
     <footer>
-        <div class="container footer-bg text-white">
+        <div class="container text-white top-margin">
             <div class="row footer-text">
                 <div class="col-md-6 ">
                     <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h6></h6>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-sm-4">
                     <ul class="list-unstyled">
-                        <li>Courses</li>
+                        <li class="big-font">Courses</li>
                         <li>Graphic Design</li>
                         <li>Web Design</li>
                         <li>Business</li>
@@ -269,9 +269,9 @@
                         <li>Engineering</li>
                     </ul>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-sm-4">
                     <ul class="list-unstyled">
-                        <li>Terms</li>
+                        <li class="big-font">Terms</li>
                         <li>Graphic Design</li>
                         <li>Web Design</li>
                         <li>Business</li>
@@ -279,9 +279,9 @@
                         <li>Engineering</li>
                     </ul>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-sm-4">
                     <ul class="list-unstyled">
-                        <li>Useful Link</li>
+                        <li class="big-font">Useful Link</li>
                         <li>Graphic Design</li>
                         <li>Web Design</li>
                         <li>Business</li>
@@ -291,7 +291,7 @@
                 </div>
 
             </div>
-            <div class="credits"> <small id="credits">&copy; Tazwar 2020 || All rights reserved.</small> </div>
+            <div class="text-center credits"> <small>&copy; Tazwar 2020 || All rights reserved.</small> </div>
             </div>
         
     </footer>
