--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 <body>
 
+    <!-- Header -->
+
     <header>
 
         <!-- Navbar -->
@@ -57,6 +59,8 @@
         </div>
     </header>
 
+<!-- Header Intro -->
+
     <section class="header">
         <div class="container top-margin">
             <div class="row d-flex align-items-center header bg-color">
@@ -69,38 +73,39 @@
                     <button class="button-green">Get Started</button>
                 </div>
                 <div class="col-md-6">
-                    <img class="w-100" src="images/Photos/Illustration.png" alt="">
+                    <img class="w-100" src="images/Photos/Illustration.png" alt="Illustration">
                 </div>
             </div>
         </div>
     </section>
 
     <!-- About Us -->
+
     <section class="about-us">
-        <div class="container top-margin">
+        <div class="container top-margin " id="books">
             <div class="row d-flex justify-content-between text-center">
-                <div class="col-md-3 each-item">
+                <div class="col-md-3 col-sm-6 each-item">
                     <div class="info">
                     <img class="w-25" src="images/ICON/book.png" alt="book-icon">
                     <h4>1500+ Topic</h4>
                     <h6>Learn Anythings</h6>
                 </div>
                 </div>
-                <div class="col-md-3 each-item">
+                <div class="col-md-3 col-sm-6 each-item">
                     <div class="info">
-                    <img class="w-25" src="images/ICON/Student.png" alt="book-icon">
+                    <img class="w-25" src="images/ICON/Student.png" alt="exam-icon">
                     <h4>18000+ Students</h4>
                     <h6>Learn Anythings</h6>
                 </div>
                 </div>
-                <div class="col-md-3 each-item">
+                <div class="col-md-3 col-sm-6 each-item">
                     <div class="info">
-                    <img class="w-25" src="images/ICON/Test.png" alt="book-icon">
+                    <img class="w-25" src="images/ICON/Test.png" alt="exam-icon">
                     <h4>9K+ Test Taken</h4>
                     <h6>Learn Anythings</h6>
                 </div>
                 </div>
-                <div class="col-md-3 each-item">
+                <div class="col-md-3 col-sm-6 each-item">
                     <div class="info">
                     <img class="w-25" src="images/ICON/Students.png" alt="book-icon">
                     <h4>2000+ student</h4>
@@ -111,7 +116,7 @@
         </div>
     </section>
 
-    <!-- Card -->
+    <!-- Online Courses -->
 
     <section class="online-courses">
             <div class="container top-margin" id="courses">
@@ -120,7 +125,7 @@
                      </div>
                         <div class="card-deck">
                             <div class="card">
-                                <img src="images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
+                                <img src="images/Photos/Morder pyschology.png" class="card-img-top" alt="Course X">
                                 <div class="card-body">
                                     <h4 class="card-title">Modern Psychology</h4>
                                     <p class="card-text">Designation</p>
@@ -129,17 +134,18 @@
                                 <div class="card-footer">
                                     <div class="card-footer row  d-flex justify-content-between">
                                         <div class="row d-flex">
-                                         <img class="" src="images/ICON/calendar.png" alt="">
+                                         <img class="" src="images/ICON/calendar.png" alt="Calender-Icon">
                                          <h6>Start 20 April,2021</h6>
                                         </div>
                                         <div class="row d-flex">
-                                         <img src="images/ICON/people.png" alt="">
+                                         <img src="images/ICON/people.png" alt="people-icon">
                                          <h6>60 Seats</h6>
                                         </div>
-                                     </div>                                </div>
+                                     </div>                                
+                                    </div>
                             </div>
                             <div class="card">
-                                <img src="images/Photos/Morder psyc.png" class="card-img-top" alt="...">
+                                <img src="images/Photos/Morder psyc.png" class="card-img-top" alt="Course Y">
                                 <div class="card-body">
                                     <h4 class="card-title">Modern Psychology</h4>
                                     <p class="card-text">Designation</p>
@@ -148,17 +154,18 @@
                                 <div class="card-footer">
                                     <div class="card-footer row  d-flex justify-content-between">
                                         <div class="row d-flex">
-                                         <img class="" src="images/ICON/calendar.png" alt="">
+                                         <img class="" src="images/ICON/calendar.png" alt="Calender-Icon">
                                          <h6>Start 20 April,2021</h6>
                                         </div>
                                         <div class="row d-flex">
-                                         <img src="images/ICON/people.png" alt="">
+                                         <img src="images/ICON/people.png" alt="people-icon">
                                          <h6>60 Seats</h6>
                                         </div>
-                                     </div>                                </div>
+                                     </div>                                
+                                    </div>
                             </div>
                             <div class="card">
-                                <img src="images/Photos/Morder pychons.png" class="card-img-top" alt="...">
+                                <img src="images/Photos/Morder pychons.png" class="card-img-top" alt="Course Z">
                                 <div class="card-body">
                                     <h4 class="card-title">Modern Psychology</h4>
                                     <p class="card-text">Designation</p>
@@ -167,14 +174,15 @@
                                 <div class="card-footer">
                                     <div class="card-footer row  d-flex justify-content-between">
                                         <div class="row d-flex">
-                                         <img class="" src="images/ICON/calendar.png" alt="">
+                                         <img class="" src="images/ICON/calendar.png" alt="Calender-Icon">
                                          <h6>Start 20 April,2021</h6>
                                         </div>
                                         <div class="row d-flex">
-                                         <img src="images/ICON/people.png" alt="">
+                                         <img src="images/ICON/people.png" alt="people-icon">
                                          <h6>60 Seats</h6>
                                         </div>
-                                     </div>                                </div>
+                                     </div>                                
+                                    </div>
                             </div>
                         </div>
                 </div>
@@ -182,11 +190,11 @@
     </section>
 
     <!-- Testimonial -->
+
     <section class="tesimonial">
-        <div class="container top-margin" id="testimonial">
+        <div class="container top-margin col-md-12 col-sm-12 col-12 " id="testimonial">
             <div class="row d-flex justify-content-center testimonial-title">
                 <h2>Testinmonial</h2>
-
             </div>
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -197,23 +205,25 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
           <div class="row  d-flex  align-items-center carousel-info">
-              <div class="col-md-5"> <img class="w-50 float-right" src="images/Photos/Man.png" alt=""> 
+              <div class="col-md-5"> <img class="w-50 float-right" src="images/Photos/Man.png" alt="User 1"> 
           </div>
               <div class="col-md-7">  <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h5></div>
           </div>
       </div>
       <div class="carousel-item">
         <div class="row  d-flex  align-items-center carousel-info">
-            <div class="col-md-5"> <img class="w-50 float-right" src="images/Photos/woman.jpeg" alt=""> 
+            <div class="col-md-5"> <img class="w-50 float-right" src="images/Photos/woman.jpeg" alt="User 2"> 
         </div>
             <div class="col-md-7">  <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h5></div>
-        </div>      </div>
+        </div>      
+    </div>
       <div class="carousel-item">
         <div class="row  d-flex  align-items-center carousel-info">
-            <div class="col-md-5"> <img class="w-50 float-right" src="images/Photos/man2.jpeg" alt=""> 
+            <div class="col-md-5"> <img class="w-50 float-right" src="images/Photos/man2.jpeg" alt="User 3"> 
         </div>
             <div class="col-md-7">  <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h5></div>
-        </div>      </div>
+        </div>      
+    </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -224,7 +234,7 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-        </div>
+    </div>
     </section>
 
     <!-- Newsletter -->
@@ -256,10 +266,10 @@
     <footer>
         <div class="container text-white top-margin">
             <div class="row footer-text">
-                <div class="col-md-6 ">
+                <div class="col-md-6 col-sm-6 col-6 ">
                     <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h6></h6>
                 </div>
-                <div class="col-md-2 col-sm-4">
+                <div class="col-md-2 col-sm-6 col-6">
                     <ul class="list-unstyled">
                         <li class="big-font">Courses</li>
                         <li>Graphic Design</li>
@@ -269,7 +279,7 @@
                         <li>Engineering</li>
                     </ul>
                 </div>
-                <div class="col-md-2 col-sm-4">
+                <div class="col-md-2 col-sm-6 col-6">
                     <ul class="list-unstyled">
                         <li class="big-font">Terms</li>
                         <li>Graphic Design</li>
@@ -279,7 +289,7 @@
                         <li>Engineering</li>
                     </ul>
                 </div>
-                <div class="col-md-2 col-sm-4">
+                <div class="col-md-2 col-sm-6 col-6">
                     <ul class="list-unstyled">
                         <li class="big-font">Useful Link</li>
                         <li>Graphic Design</li>
@@ -290,11 +300,12 @@
                     </ul>
                 </div>
 
+                <!-- Credits -->
+
             </div>
             <div class="text-center credits"> <small>&copy; Tazwar 2020 || All rights reserved.</small> </div>
             </div>
-        
-    </footer>
+        </footer>
 
     <!-- Bootstrap JS CDN -->
 
