--- a/index.html
+++ b/index.html
@@ -207,21 +207,21 @@
           <div class="row  d-flex  align-items-center carousel-info">
               <div class="col-md-5"> <img class="w-50 float-right" src="images/Photos/Man.png" alt="User 1"> 
           </div>
-              <div class="col-md-7">  <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h5></div>
+              <div class="col-md-7 review">  <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h5></div>
           </div>
       </div>
       <div class="carousel-item">
         <div class="row  d-flex  align-items-center carousel-info">
             <div class="col-md-5"> <img class="w-50 float-right" src="images/Photos/woman.jpeg" alt="User 2"> 
         </div>
-            <div class="col-md-7">  <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h5></div>
+            <div class="col-md-7 review">  <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h5></div>
         </div>      
     </div>
       <div class="carousel-item">
         <div class="row  d-flex  align-items-center carousel-info">
             <div class="col-md-5"> <img class="w-50 float-right" src="images/Photos/man2.jpeg" alt="User 3"> 
         </div>
-            <div class="col-md-7">  <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h5></div>
+            <div class="col-md-7 review">  <h6>Aenean fringilla a dolor ac congue. Pellentesque tempus sit amet justo ut tempor. Nullam molestie viverra est, sit amet fringilla erat. Mauris sollicitudin pellentesque consequat. Donec mollis mauris quis mauris congue, a lobortis lectus semper. Donec rutrum libero ac ultrices facilisis. Etiam eu ipsum nisl.</h5></div>
         </div>      
     </div>
     </div>
